K8s/centos-node.yaml
apiVersion: v1
kind: Pod
metadata:
  name: centos-pod
spec:
  containers:
    - name: centos-container
      image: centos:7
      command: ["/bin/bash", "-c", "while true;do curl http://localhost:80/;sleep 3;done"]
