K8s/newpod-rs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exam-pod
  namespace: custom-namespace
spec:
  containers:
    - name: nginx-container
      image: nginx:1.14
      ports:
        - containerPort: 80
