K8s/appjs-svc_NoSelector.yaml
apiVersion: v1
kind: Service
metadata:
  name: appjs-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
