K8s/ingress-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marvel
spec:
  replicas: 1
  selector:
    matchLabels:
      name: marvel
  template:
    metadata:
      labels:
        name: marvel
    spec:
      containers:
      - name: marvel
        image: smlinux/marvel
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: marvel-service
spec:
  selector:
    name: marvel
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thor
spec:
  replicas: 1
  selector:
    matchLabels:
      name: thor
  template:
    metadata:
      labels:
        name: thor
    spec:
      containers:
      - name: thor
        image: smlinux/thor
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: thor-service
spec:
  selector:
    name: thor
  ports:
  - port: 80
    targetPort: 80
